// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -154,11 +154,11 @@
        </div>
        <hr
          class=\\"MuiDivider-root-181 PublicationCitation-divider-170\\"
        />
        <form>
-         <span />
+         <div />
          <div
            class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-24-29\\"
          >
            <div
              class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
@@ -362,29 +362,29 @@
                      <div
                        class=\\"MuiFormControl-root-252\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-263 MuiFormLabel-error-266 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-263 MuiFormLabel-filled-267 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
+                         data-shrink=\\"true\\"
                        >
                          <span>
                            Scale/Significance of work* 
                            <span
                              style=\\"font-weight: 700;\\"
                            >
                              (not for public view)
                            </span>
                          </span>
                          <span
-                           class=\\"MuiFormLabel-asterisk-269 MuiFormLabel-error-266\\"
+                           class=\\"MuiFormLabel-asterisk-269\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-error-296 MuiInput-error-282 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                         class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
                          label=\\"[object Object]\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-270\\"
@@ -395,18 +395,16 @@
                              class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
                              id=\\"significance\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Major
                            </div>
                            <input
                              name=\\"significance\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454026\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
                              focusable=\\"false\\"
@@ -417,15 +415,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-379 MuiFormHelperText-error-380 MuiFormHelperText-required-386\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
                      style=\\"margin-top: 24px;\\"
@@ -1632,10 +1625,76 @@
                        id=\\"Notes for this work\\"
                        name=\\"comments\\"
                        placeholder=\\"Add any other notes or comments about this work to send to the eSpace team.\\"
                        rows=\\"5\\"
                      />
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-24-29 MuiGrid-align-items-xs-flex-start-14 MuiGrid-align-content-xs-center-17 MuiGrid-justify-xs-center-22 Alert-warning-207 Alert-common-199\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-true-47\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-5 MuiGrid-align-items-xs-flex-start-14 MuiGrid-align-content-xs-center-17 MuiGrid-justify-xs-center-22\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-6 Alert-icon-200\\"
+                       id=\\"icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-154 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-6 MuiGrid-grid-xs-true-33 Alert-text-201\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Author affiliation rows marked with red are required
+                           </li>
+                           <li>
+                             Creator research statement is required
+                           </li>
+                           <li>
+                             Audience size is required
+                           </li>
+                           <li>
+                             Quality indicator is required
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -535,22 +535,22 @@
                      <div
                        class=\\"MuiFormControl-root-252\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-263 MuiFormLabel-error-266 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-263 MuiFormLabel-filled-267 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
+                         data-shrink=\\"true\\"
                        >
                          Audience size
                          <span
-                           class=\\"MuiFormLabel-asterisk-269 MuiFormLabel-error-266\\"
+                           class=\\"MuiFormLabel-asterisk-269\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-error-296 MuiInput-error-282 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                         class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
                          label=\\"Audience size\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-270\\"
@@ -561,18 +561,16 @@
                              class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
                              id=\\"rek-audience-size\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Less than 100
                            </div>
                            <input
                              name=\\"fez_record_search_key_audience_size.rek_audience_size\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"453992\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
                              focusable=\\"false\\"
@@ -583,15 +581,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-379 MuiFormHelperText-error-380 MuiFormHelperText-required-386\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-6-53\\"
                    >
@@ -1681,13 +1674,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Audience size is required
                            </li>
                            <li>
                              Quality indicator is required
                            </li>
                          </ul>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -590,41 +590,40 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-263 MuiFormLabel-error-266 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-263 MuiFormLabel-filled-267 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
+                         data-shrink=\\"true\\"
                        >
                          Quality indicators
                          <span
-                           class=\\"MuiFormLabel-asterisk-269 MuiFormLabel-error-266\\"
+                           class=\\"MuiFormLabel-asterisk-269\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-error-296 MuiInput-error-282 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                         class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
                        >
                          <div
                            class=\\"MuiSelect-root-270\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
                              id=\\"quality-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Commissioned by external body
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454036\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
                              focusable=\\"false\\"
@@ -635,15 +634,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-379 MuiFormHelperText-error-380 MuiFormHelperText-required-386\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -1674,13 +1668,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Quality indicator is required
                            </li>
                          </ul>
                        </span>
                      </div>
                    </div>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -988,33 +988,31 @@
                          <li
                            class=\\"MuiListItem-container-351\\"
                          >
                            <div
                              aria-label=\\"Select this author (Topology) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 WithTheme-WithWidth-ContributorRow---highlighted-371 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
+                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 WithTheme-WithWidth-ContributorRow---highlighted-371 WithTheme-WithWidth-ContributorRow---rowSelected-372 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
                              id=\\"contributor-editor-row-0\\"
                              tabindex=\\"0\\"
                            >
                              <div
-                               class=\\"MuiListItemIcon-root-378\\"
+                               class=\\"MuiListItemIcon-root-378 WithTheme-WithWidth-ContributorRow---selected-373\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\"
                                  class=\\"MuiSvgIcon-root-154\\"
                                  focusable=\\"false\\"
                                  role=\\"presentation\\"
                                  viewBox=\\"0 0 24 24\\"
                                >
                                  <path
-                                   d=\\"M0 0h24v24H0V0z\\"
-                                   fill=\\"none\\"
+                                   d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
                                  />
-                                 <g>
                                  <path
-                                     d=\\"M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
                                  />
-                                 </g>
                                </svg>
                              </div>
                              <div
                                class=\\"MuiGrid-container-5 WithTheme-WithWidth-ContributorRow---listContainer-368\\"
                              >
@@ -1023,16 +1021,16 @@
                                >
                                  <div
                                    class=\\"MuiListItemText-root-361\\"
                                  >
                                    <p
-                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375 WithTheme-WithWidth-ContributorRow---selected-373 MuiTypography-body2-110 MuiTypography-noWrap-128\\"
                                    >
                                      Topology
                                    </p>
                                    <span
-                                     class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---selected-373 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
                                    >
                                      First  listed author
                                    </span>
                                  </div>
                                </div>
@@ -1061,11 +1059,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-150\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-154\\"
+                                     class=\\"MuiSvgIcon-root-154 WithTheme-WithWidth-ContributorRow---selected-373\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1093,11 +1091,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-150\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-154\\"
+                                     class=\\"MuiSvgIcon-root-154 WithTheme-WithWidth-ContributorRow---selected-373\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1557,10 +1555,227 @@
                                </button>
                              </span>
                            </div>
                          </li>
                        </ul>
+                       <div
+                         style=\\"margin-top: 24px;\\"
+                       >
+                         <div>
+                           <span
+                             class=\\"authorSteps\\"
+                           >
+                             Step 2 of 2
+                           </span>
+                            - 
+                           <b>
+                             Update the affiliation information
+                           </b>
+                           .
+                         </div>
+                         <div
+                           class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
+                           style=\\"margin-top: 8px;\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-2-49\\"
+                           >
+                             <div
+                               class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
+                             >
+                               <label
+                                 class=\\"MuiFormLabel-root-263 MuiFormLabel-filled-267 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
+                                 data-shrink=\\"true\\"
+                               >
+                                 Org affiliation
+                               </label>
+                               <div
+                                 class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                                 required=\\"\\"
+                               >
+                                 <div
+                                   class=\\"MuiSelect-root-270\\"
+                                 >
+                                   <div
+                                     aria-haspopup=\\"true\\"
+                                     aria-pressed=\\"false\\"
+                                     class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
+                                     id=\\"org-affiliation-selector\\"
+                                     role=\\"button\\"
+                                     tabindex=\\"0\\"
+                                   >
+                                     Not UQ
+                                   </div>
+                                   <input
+                                     type=\\"hidden\\"
+                                     value=\\"NotUQ\\"
+                                   />
+                                   <svg
+                                     aria-hidden=\\"true\\"
+                                     class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
+                                     focusable=\\"false\\"
+                                     role=\\"presentation\\"
+                                     viewBox=\\"0 0 24 24\\"
+                                   >
+                                     <path
+                                       d=\\"M7 10l5 5 5-5z\\"
+                                     />
+                                   </svg>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-true-47\\"
+                           >
+                             <div
+                               class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
+                             >
+                               <label
+                                 class=\\"MuiFormLabel-root-263 MuiFormLabel-disabled-265 MuiFormLabel-filled-267 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
+                                 data-shrink=\\"true\\"
+                                 for=\\"authors-name-as-published-field\\"
+                               >
+                                 Enter each author's name as published (eg. Smith, John)
+                                 <span
+                                   class=\\"MuiFormLabel-asterisk-269\\"
+                                 >
+                                    *
+                                 </span>
+                               </label>
+                               <div
+                                 class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-disabled-293 MuiInput-disabled-280 MuiInputBase-fullWidth-299 MuiInput-fullWidth-284 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                               >
+                                 <input
+                                   aria-invalid=\\"false\\"
+                                   autocomplete=\\"off\\"
+                                   class=\\"MuiInputBase-input-300 MuiInput-input-285 MuiInputBase-disabled-293 MuiInput-disabled-280\\"
+                                   disabled=\\"\\"
+                                   id=\\"authors-name-as-published-field\\"
+                                   placeholder=\\"Type the name exactly as published\\"
+                                   required=\\"\\"
+                                   type=\\"text\\"
+                                   value=\\"Topology\\"
+                                 />
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
+                               >
+                                 <div
+                                   class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
+                                 >
+                                   <label
+                                     class=\\"MuiFormLabel-root-263 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
+                                     data-shrink=\\"false\\"
+                                     for=\\"org-affiliation-name\\"
+                                   >
+                                     Organisation
+                                     <span
+                                       class=\\"MuiFormLabel-asterisk-269\\"
+                                     >
+                                        *
+                                     </span>
+                                   </label>
+                                   <div
+                                     class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-fullWidth-299 MuiInput-fullWidth-284 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                                   >
+                                     <input
+                                       aria-invalid=\\"false\\"
+                                       class=\\"MuiInputBase-input-300 MuiInput-input-285\\"
+                                       id=\\"org-affiliation-name\\"
+                                       placeholder=\\"Enter the primary affiliated organisation\\"
+                                       required=\\"\\"
+                                       type=\\"text\\"
+                                       value=\\"\\"
+                                     />
+                                   </div>
+                                 </div>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
+                               >
+                                 <div
+                                   class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
+                                 >
+                                   <label
+                                     class=\\"MuiFormLabel-root-263 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
+                                     data-shrink=\\"false\\"
+                                   >
+                                     Organisation type
+                                     <span
+                                       class=\\"MuiFormLabel-asterisk-269\\"
+                                     >
+                                        *
+                                     </span>
+                                   </label>
+                                   <div
+                                     class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
+                                   >
+                                     <div
+                                       class=\\"MuiSelect-root-270\\"
+                                     >
+                                       <div
+                                         aria-haspopup=\\"true\\"
+                                         aria-pressed=\\"false\\"
+                                         class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
+                                         id=\\"org-affiliation-type\\"
+                                         role=\\"button\\"
+                                         tabindex=\\"0\\"
+                                       >
+                                         <span>
+                                           ​
+                                         </span>
+                                       </div>
+                                       <input
+                                         type=\\"hidden\\"
+                                         value=\\"\\"
+                                       />
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M7 10l5 5 5-5z\\"
+                                         />
+                                       </svg>
+                                     </div>
+                                   </div>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
+                             style=\\"margin-bottom: 8px;\\"
+                           >
+                             <button
+                               class=\\"MuiButtonBase-root-151 MuiButtonBase-disabled-152 MuiButton-root-313 MuiButton-contained-324 MuiButton-containedPrimary-325 MuiButton-raised-327 MuiButton-raisedPrimary-328 MuiButton-disabled-333 MuiButton-fullWidth-338\\"
+                               disabled=\\"\\"
+                               id=\\"submit-author\\"
+                               tabindex=\\"-1\\"
+                               type=\\"button\\"
+                             >
+                               <span
+                                 class=\\"MuiButton-label-314\\"
+                               >
+                                 Update author
+                               </span>
+                             </button>
+                           </div>
+                         </div>
+                       </div>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-colorError-136\\"
                    >"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -988,31 +988,33 @@
                          <li
                            class=\\"MuiListItem-container-351\\"
                          >
                            <div
                              aria-label=\\"Select this author (Topology) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 WithTheme-WithWidth-ContributorRow---highlighted-371 WithTheme-WithWidth-ContributorRow---rowSelected-372 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
+                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
                              id=\\"contributor-editor-row-0\\"
                              tabindex=\\"0\\"
                            >
                              <div
-                               class=\\"MuiListItemIcon-root-378 WithTheme-WithWidth-ContributorRow---selected-373\\"
+                               class=\\"MuiListItemIcon-root-378\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\"
                                  class=\\"MuiSvgIcon-root-154\\"
                                  focusable=\\"false\\"
                                  role=\\"presentation\\"
                                  viewBox=\\"0 0 24 24\\"
                                >
                                  <path
-                                   d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
+                                   d=\\"M0 0h24v24H0V0z\\"
+                                   fill=\\"none\\"
                                  />
+                                 <g>
                                    <path
-                                   d=\\"M0 0h24v24H0z\\"
-                                   fill=\\"none\\"
+                                     d=\\"M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
                                    />
+                                 </g>
                                </svg>
                              </div>
                              <div
                                class=\\"MuiGrid-container-5 WithTheme-WithWidth-ContributorRow---listContainer-368\\"
                              >
@@ -1021,27 +1023,38 @@
                                >
                                  <div
                                    class=\\"MuiListItemText-root-361\\"
                                  >
                                    <p
-                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375 WithTheme-WithWidth-ContributorRow---selected-373 MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
                                    >
                                      Topology
                                    </p>
                                    <span
-                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---selected-373 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
                                    >
                                      First  listed author
                                    </span>
                                  </div>
                                </div>
                                <div
                                  class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-5-52\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-361\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                   >
+                                     test
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-102   MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                   >
+                                     Organisation type: Government
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-367\\"
@@ -1059,11 +1072,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-150\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-154 WithTheme-WithWidth-ContributorRow---selected-373\\"
+                                     class=\\"MuiSvgIcon-root-154\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1091,11 +1104,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-150\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-154 WithTheme-WithWidth-ContributorRow---selected-373\\"
+                                     class=\\"MuiSvgIcon-root-154\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1555,227 +1568,10 @@
                                </button>
                              </span>
                            </div>
                          </li>
                        </ul>
-                       <div
-                         style=\\"margin-top: 24px;\\"
-                       >
-                         <div>
-                           <span
-                             class=\\"authorSteps\\"
-                           >
-                             Step 2 of 2
-                           </span>
-                            - 
-                           <b>
-                             Update the affiliation information
-                           </b>
-                           .
-                         </div>
-                         <div
-                           class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
-                           style=\\"margin-top: 8px;\\"
-                         >
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-2-49\\"
-                           >
-                             <div
-                               class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
-                             >
-                               <label
-                                 class=\\"MuiFormLabel-root-263 MuiFormLabel-filled-267 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
-                                 data-shrink=\\"true\\"
-                               >
-                                 Org affiliation
-                               </label>
-                               <div
-                                 class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
-                                 required=\\"\\"
-                               >
-                                 <div
-                                   class=\\"MuiSelect-root-270\\"
-                                 >
-                                   <div
-                                     aria-haspopup=\\"true\\"
-                                     aria-pressed=\\"false\\"
-                                     class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
-                                     id=\\"org-affiliation-selector\\"
-                                     role=\\"button\\"
-                                     tabindex=\\"0\\"
-                                   >
-                                     Not UQ
-                                   </div>
-                                   <input
-                                     type=\\"hidden\\"
-                                     value=\\"NotUQ\\"
-                                   />
-                                   <svg
-                                     aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
-                                     focusable=\\"false\\"
-                                     role=\\"presentation\\"
-                                     viewBox=\\"0 0 24 24\\"
-                                   >
-                                     <path
-                                       d=\\"M7 10l5 5 5-5z\\"
-                                     />
-                                   </svg>
-                                 </div>
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-true-47\\"
-                           >
-                             <div
-                               class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
-                             >
-                               <label
-                                 class=\\"MuiFormLabel-root-263 MuiFormLabel-disabled-265 MuiFormLabel-filled-267 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260 MuiInputLabel-shrink-259\\"
-                                 data-shrink=\\"true\\"
-                                 for=\\"authors-name-as-published-field\\"
-                               >
-                                 Enter each author's name as published (eg. Smith, John)
-                                 <span
-                                   class=\\"MuiFormLabel-asterisk-269\\"
-                                 >
-                                    *
-                                 </span>
-                               </label>
-                               <div
-                                 class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-disabled-293 MuiInput-disabled-280 MuiInputBase-fullWidth-299 MuiInput-fullWidth-284 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
-                               >
-                                 <input
-                                   aria-invalid=\\"false\\"
-                                   autocomplete=\\"off\\"
-                                   class=\\"MuiInputBase-input-300 MuiInput-input-285 MuiInputBase-disabled-293 MuiInput-disabled-280\\"
-                                   disabled=\\"\\"
-                                   id=\\"authors-name-as-published-field\\"
-                                   placeholder=\\"Type the name exactly as published\\"
-                                   required=\\"\\"
-                                   type=\\"text\\"
-                                   value=\\"Topology\\"
-                                 />
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
-                           >
-                             <div
-                               class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
-                             >
-                               <div
-                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
-                               >
-                                 <div
-                                   class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
-                                 >
-                                   <label
-                                     class=\\"MuiFormLabel-root-263 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
-                                     data-shrink=\\"false\\"
-                                     for=\\"org-affiliation-name\\"
-                                   >
-                                     Organisation
-                                     <span
-                                       class=\\"MuiFormLabel-asterisk-269\\"
-                                     >
-                                        *
-                                     </span>
-                                   </label>
-                                   <div
-                                     class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-fullWidth-299 MuiInput-fullWidth-284 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
-                                   >
-                                     <input
-                                       aria-invalid=\\"false\\"
-                                       class=\\"MuiInputBase-input-300 MuiInput-input-285\\"
-                                       id=\\"org-affiliation-name\\"
-                                       placeholder=\\"Enter the primary affiliated organisation\\"
-                                       required=\\"\\"
-                                       type=\\"text\\"
-                                       value=\\"\\"
-                                     />
-                                   </div>
-                                 </div>
-                               </div>
-                               <div
-                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
-                               >
-                                 <div
-                                   class=\\"MuiFormControl-root-252 MuiFormControl-fullWidth-255\\"
-                                 >
-                                   <label
-                                     class=\\"MuiFormLabel-root-263 MuiFormLabel-required-268 MuiInputLabel-root-256 MuiInputLabel-formControl-257 MuiInputLabel-animated-260\\"
-                                     data-shrink=\\"false\\"
-                                   >
-                                     Organisation type
-                                     <span
-                                       class=\\"MuiFormLabel-asterisk-269\\"
-                                     >
-                                        *
-                                     </span>
-                                   </label>
-                                   <div
-                                     class=\\"MuiInputBase-root-290 MuiInput-root-277 MuiInput-underline-281 MuiInputBase-formControl-291 MuiInput-formControl-278\\"
-                                   >
-                                     <div
-                                       class=\\"MuiSelect-root-270\\"
-                                     >
-                                       <div
-                                         aria-haspopup=\\"true\\"
-                                         aria-pressed=\\"false\\"
-                                         class=\\"MuiSelect-select-271 MuiSelect-selectMenu-274 MuiInputBase-input-300 MuiInput-input-285\\"
-                                         id=\\"org-affiliation-type\\"
-                                         role=\\"button\\"
-                                         tabindex=\\"0\\"
-                                       >
-                                         <span>
-                                           ​
-                                         </span>
-                                       </div>
-                                       <input
-                                         type=\\"hidden\\"
-                                         value=\\"\\"
-                                       />
-                                       <svg
-                                         aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-154 MuiSelect-icon-276\\"
-                                         focusable=\\"false\\"
-                                         role=\\"presentation\\"
-                                         viewBox=\\"0 0 24 24\\"
-                                       >
-                                         <path
-                                           d=\\"M7 10l5 5 5-5z\\"
-                                         />
-                                       </svg>
-                                     </div>
-                                   </div>
-                                 </div>
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
-                             style=\\"margin-bottom: 8px;\\"
-                           >
-                             <button
-                               class=\\"MuiButtonBase-root-151 MuiButtonBase-disabled-152 MuiButton-root-313 MuiButton-contained-324 MuiButton-containedPrimary-325 MuiButton-raised-327 MuiButton-raisedPrimary-328 MuiButton-disabled-333 MuiButton-fullWidth-338\\"
-                               disabled=\\"\\"
-                               id=\\"submit-author\\"
-                               tabindex=\\"-1\\"
-                               type=\\"button\\"
-                             >
-                               <span
-                                 class=\\"MuiButton-label-314\\"
-                               >
-                                 Update author
-                               </span>
-                             </button>
-                           </div>
-                         </div>
-                       </div>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-colorError-136\\"
                    >"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1127,11 +1127,11 @@
                          <li
                            class=\\"MuiListItem-container-351\\"
                          >
                            <div
                              aria-label=\\"Select this author (Davidson, Robert) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 WithTheme-WithWidth-ContributorRow---highlighted-371 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
+                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
                              id=\\"contributor-editor-row-1\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-378\\"
@@ -1178,11 +1178,22 @@
                                <div
                                  class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-5-52\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-361\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-102   MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-367\\""
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 7`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1455,11 +1455,11 @@
                          <li
                            class=\\"MuiListItem-container-351\\"
                          >
                            <div
                              aria-label=\\"Select this author (The Brodsky Quartet) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 WithTheme-WithWidth-ContributorRow---highlighted-371 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
+                             class=\\"MuiListItem-root-350 WithTheme-WithWidth-ContributorRow---listItem-369 MuiListItem-default-353 MuiListItem-gutters-357 MuiListItem-divider-356 MuiListItem-secondaryAction-359\\"
                              id=\\"contributor-editor-row-3\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-378\\"
@@ -1506,14 +1506,25 @@
                                <div
                                  class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-5-52\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-361\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-375  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-102   MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
                                  </div>
                                </div>
                              </div>
+                           </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-367\\"
                            >
                              <span
                                title=\\"Move item up the order\\"
@@ -1581,15 +1592,10 @@
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
-                   <span
-                     class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-colorError-136\\"
-                   >
-                     Rows marked with a red prefix must be updated
-                   </span>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -1685,13 +1691,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Author affiliation rows marked with red are required
-                           </li>
                            <li>
                              Creator research statement is required
                            </li>
                          </ul>
                        </span>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -364,29 +364,29 @@
                      <div
                        class=\\"MuiFormControl-root-642\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-653 MuiFormLabel-error-656 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-653 MuiFormLabel-filled-657 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650 MuiInputLabel-shrink-649\\"
+                         data-shrink=\\"true\\"
                        >
                          <span>
                            Scale/Significance of work* 
                            <span
                              style=\\"font-weight: 700;\\"
                            >
                              (not for public view)
                            </span>
                          </span>
                          <span
-                           class=\\"MuiFormLabel-asterisk-659 MuiFormLabel-error-656\\"
+                           class=\\"MuiFormLabel-asterisk-659\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-error-686 MuiInput-error-672 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
+                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
                          label=\\"[object Object]\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-660\\"
@@ -397,18 +397,16 @@
                              class=\\"MuiSelect-select-661 MuiSelect-selectMenu-664 MuiInputBase-input-690 MuiInput-input-675\\"
                              id=\\"significance\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Major
                            </div>
                            <input
                              name=\\"significance\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454026\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-544 MuiSelect-icon-666\\"
                              focusable=\\"false\\"
@@ -419,15 +417,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-774 MuiFormHelperText-error-775 MuiFormHelperText-required-781\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435\\"
                      style=\\"margin-top: 24px;\\"
@@ -1852,13 +1845,10 @@
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
                            <li>
                              Author affiliation rows marked with red are required
-                           </li>
-                           <li>
-                             Scale/Significance of work is required
                            </li>
                            <li>
                              Creator research statement is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -533,45 +533,38 @@
                    />
                    <div
                      class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-sm-12-449\\"
                    >
                      <div
-                       aria-describedby=\\"rek-total-pages-helper-text\\"
                        class=\\"MuiFormControl-root-642 MuiFormControl-fullWidth-645\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-653 MuiFormLabel-error-656 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-653 MuiFormLabel-filled-657 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650 MuiInputLabel-shrink-649\\"
+                         data-shrink=\\"true\\"
                          for=\\"rek-total-pages\\"
                        >
                          Total pages/Extent
                          <span
-                           class=\\"MuiFormLabel-asterisk-659 MuiFormLabel-error-656\\"
+                           class=\\"MuiFormLabel-asterisk-659\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-error-686 MuiInput-error-672 MuiInputBase-fullWidth-689 MuiInput-fullWidth-674 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
+                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-fullWidth-689 MuiInput-fullWidth-674 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
                        >
                          <input
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-690 MuiInput-input-675\\"
                            id=\\"rek-total-pages\\"
                            name=\\"fez_record_search_key_total_pages.rek_total_pages\\"
                            placeholder=\\"Enter total pages, size or duration of work\\"
                            required=\\"\\"
                            type=\\"text\\"
-                           value=\\"\\"
+                           value=\\"10\\"
                          />
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-774 MuiFormHelperText-error-775 MuiFormHelperText-required-781\\"
-                         id=\\"rek-total-pages-helper-text\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-sm-6-443\\"
                    >
@@ -1848,13 +1841,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Total page is required
                            </li>
                            <li>
                              Audience size is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -571,22 +571,22 @@
                      <div
                        class=\\"MuiFormControl-root-642\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-653 MuiFormLabel-error-656 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-653 MuiFormLabel-filled-657 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650 MuiInputLabel-shrink-649\\"
+                         data-shrink=\\"true\\"
                        >
                          Audience size
                          <span
-                           class=\\"MuiFormLabel-asterisk-659 MuiFormLabel-error-656\\"
+                           class=\\"MuiFormLabel-asterisk-659\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-error-686 MuiInput-error-672 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
+                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
                          label=\\"Audience size\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-660\\"
@@ -597,18 +597,16 @@
                              class=\\"MuiSelect-select-661 MuiSelect-selectMenu-664 MuiInputBase-input-690 MuiInput-input-675\\"
                              id=\\"rek-audience-size\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Less than 100
                            </div>
                            <input
                              name=\\"fez_record_search_key_audience_size.rek_audience_size\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"453992\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-544 MuiSelect-icon-666\\"
                              focusable=\\"false\\"
@@ -619,15 +617,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-774 MuiFormHelperText-error-775 MuiFormHelperText-required-781\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-sm-6-443\\"
                    >
@@ -1841,13 +1834,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Audience size is required
                            </li>
                            <li>
                              Quality indicator is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -626,41 +626,40 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-642 MuiFormControl-fullWidth-645\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-653 MuiFormLabel-error-656 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-653 MuiFormLabel-filled-657 MuiFormLabel-required-658 MuiInputLabel-root-646 MuiInputLabel-formControl-647 MuiInputLabel-animated-650 MuiInputLabel-shrink-649\\"
+                         data-shrink=\\"true\\"
                        >
                          Quality indicators
                          <span
-                           class=\\"MuiFormLabel-asterisk-659 MuiFormLabel-error-656\\"
+                           class=\\"MuiFormLabel-asterisk-659\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-error-686 MuiInput-error-672 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
+                         class=\\"MuiInputBase-root-680 MuiInput-root-667 MuiInput-underline-671 MuiInputBase-formControl-681 MuiInput-formControl-668\\"
                        >
                          <div
                            class=\\"MuiSelect-root-660\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-661 MuiSelect-selectMenu-664 MuiInputBase-input-690 MuiInput-input-675\\"
                              id=\\"quality-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Commissioned by external body
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454036\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-544 MuiSelect-icon-666\\"
                              focusable=\\"false\\"
@@ -671,15 +670,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-774 MuiFormHelperText-error-775 MuiFormHelperText-required-781\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -1834,13 +1828,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Quality indicator is required
                            </li>
                            <li>
                              File submission to be completed
                            </li>
                          </ul>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 5`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1151,11 +1151,11 @@
                          <li
                            class=\\"MuiListItem-container-741\\"
                          >
                            <div
                              aria-label=\\"Select this author (Grinberg, Anna) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-740 WithTheme-WithWidth-ContributorRow---listItem-759 WithTheme-WithWidth-ContributorRow---highlighted-761 MuiListItem-default-743 MuiListItem-gutters-747 MuiListItem-divider-746 MuiListItem-secondaryAction-749\\"
+                             class=\\"MuiListItem-root-740 WithTheme-WithWidth-ContributorRow---listItem-759 MuiListItem-default-743 MuiListItem-gutters-747 MuiListItem-divider-746 MuiListItem-secondaryAction-749\\"
                              id=\\"contributor-editor-row-1\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-773\\"
@@ -1202,11 +1202,22 @@
                                <div
                                  class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-sm-5-442\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-751\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-492 WithTheme-WithWidth-ContributorRow---primary-765  MuiTypography-body2-500 MuiTypography-noWrap-518\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-492   MuiTypography-caption-502 MuiTypography-noWrap-518\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-757\\""
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1321,11 +1321,11 @@
                          <li
                            class=\\"MuiListItem-container-741\\"
                          >
                            <div
                              aria-label=\\"Select this author (Healey, Christopher ) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-740 WithTheme-WithWidth-ContributorRow---listItem-759 WithTheme-WithWidth-ContributorRow---highlighted-761 MuiListItem-default-743 MuiListItem-gutters-747 MuiListItem-divider-746 MuiListItem-secondaryAction-749\\"
+                             class=\\"MuiListItem-root-740 WithTheme-WithWidth-ContributorRow---listItem-759 MuiListItem-default-743 MuiListItem-gutters-747 MuiListItem-divider-746 MuiListItem-secondaryAction-749\\"
                              id=\\"contributor-editor-row-2\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-773\\"
@@ -1372,11 +1372,22 @@
                                <div
                                  class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-sm-5-442\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-751\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-492 WithTheme-WithWidth-ContributorRow---primary-765  MuiTypography-body2-500 MuiTypography-noWrap-518\\"
+                                   >
+                                     test
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-492   MuiTypography-caption-502 MuiTypography-noWrap-518\\"
+                                   >
+                                     Organisation type: Government
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-757\\""
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1491,11 +1491,11 @@
                          <li
                            class=\\"MuiListItem-container-741\\"
                          >
                            <div
                              aria-label=\\"Select this author (Tomlinson, Vanessa ) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-740 WithTheme-WithWidth-ContributorRow---listItem-759 WithTheme-WithWidth-ContributorRow---highlighted-761 MuiListItem-default-743 MuiListItem-gutters-747 MuiListItem-divider-746 MuiListItem-secondaryAction-749\\"
+                             class=\\"MuiListItem-root-740 WithTheme-WithWidth-ContributorRow---listItem-759 MuiListItem-default-743 MuiListItem-gutters-747 MuiListItem-divider-746 MuiListItem-secondaryAction-749\\"
                              id=\\"contributor-editor-row-3\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-773\\"
@@ -1542,14 +1542,25 @@
                                <div
                                  class=\\"MuiGrid-item-396 MuiGrid-grid-xs-12-435 MuiGrid-grid-sm-5-442\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-751\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-492 WithTheme-WithWidth-ContributorRow---primary-765  MuiTypography-body2-500 MuiTypography-noWrap-518\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-492   MuiTypography-caption-502 MuiTypography-noWrap-518\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
                                  </div>
                                </div>
                              </div>
+                           </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-757\\"
                            >
                              <span
                                title=\\"Move item up the order\\"
@@ -1617,15 +1628,10 @@
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
-                   <span
-                     class=\\"MuiTypography-root-492 MuiTypography-caption-502 MuiTypography-colorError-526\\"
-                   >
-                     Rows marked with a red prefix must be updated
-                   </span>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -1845,13 +1851,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Author affiliation rows marked with red are required
-                           </li>
                            <li>
                              Creator research statement is required
                            </li>
                            <li>
                              File submission to be completed"
`;
